--- a/UI/templates/hashtag_stats.html
+++ b/UI/templates/hashtag_stats.html
@@ -50,7 +50,7 @@
             <div class="card-header">
                 <div class="card-header-title">
                     <div class="d-flex align-items-center">
-                        <span style="font-size: 1.5em; color: #f4ff26;">
+                        <span style="font-size: 1.5em; color: #dadc00;">
                             <i class="fas fa-star"></i>
                         </span>
                         <div class="ml-3">
