--- a/UI/templates/home.html
+++ b/UI/templates/home.html
@@ -16,7 +16,12 @@
         </div>
         <div class="jumbotron mt-5">
           <h3 class="display-4">What is Dranac and how to use it ?</h3>
-          <p class="lead">Hae duae provinciae bello quondam piratico catervis mixtae praedonum a Servilio pro consule missae sub iugum factae sunt vectigales. et hae quidem regiones velut in prominenti terrarum lingua positae ob orbe eoo monte Amano disparantur.</p>
+          <p class="lead">Dranac is a tool designed for the companies wishing to make an analysis of the current state
+              of a competing product, a subject of conversation and
+              concern, a personality and even more on Twitter using a hashtag.
+              <br><br>
+              You just have to enter a hashtag in the search form and wait for the result of the analysis.
+          </p>
         </div>
     </div>
     <div class="container mb-3 mt-3">
